--- a/templates/employees/add_employee.html
+++ b/templates/employees/add_employee.html
@@ -165,9 +165,9 @@
 <script>
     document.addEventListener("DOMContentLoaded", function() {
         flatpickr(".date-picker", {
-            dateFormat: "Y-m-d", 
+            dateFormat: "d-m-Y", 
             altInput: true,
-            altFormat: "F j, Y",
+            altFormat: "j F, Y",
             allowInput: true
         });
     });
